Bug 183494 - [PATCH] limits(1): usr.bin/limits: cannot set kqueues limit
Summary: [PATCH] limits(1): usr.bin/limits: cannot set kqueues limit
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 1.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-30 19:20 UTC by Stefan Neudorf
Modified: 2014-10-16 20:18 UTC (History)
1 user (show)

See Also:


Attachments
kqueues_limit.diff (992 bytes, patch)
2013-10-30 19:20 UTC, Stefan Neudorf
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Neudorf 2013-10-30 19:20:00 UTC
r256850 added kqueues limit but failed to update getopt() call leading
to -k option (similar to sh's ulimit -k) not being recognized.

How-To-Repeat:  $ limits -k 5
 usage: limits [-C class|-P pid|-U user] [-eaSHBE] [-bcdflmnstuvpw [val]] [[name=val ...] cmd]
Comment 1 dfilter service freebsd_committer freebsd_triage 2013-10-31 09:03:50 UTC
Author: kib
Date: Thu Oct 31 09:03:42 2013
New Revision: 257428
URL: http://svnweb.freebsd.org/changeset/base/257428

Log:
  Fix long line and record proper commit message for r257427:
  Add the '-k' option for getopt() call and usage.
  
  Submitted by:	Stefan Neudorf
  PR:	bin/183494
  MFC after:	1 week

Modified:
  head/usr.bin/limits/limits.c

Modified: head/usr.bin/limits/limits.c
==============================================================================
--- head/usr.bin/limits/limits.c	Thu Oct 31 08:58:32 2013	(r257427)
+++ head/usr.bin/limits/limits.c	Thu Oct 31 09:03:42 2013	(r257428)
@@ -287,7 +287,8 @@ main(int argc, char *argv[])
 
     pid = -1;
     optarg = NULL;
-    while ((ch = getopt(argc, argv, ":EeC:U:BSHP:ab:c:d:f:l:m:n:s:t:u:v:p:w:k:")) != -1) {
+    while ((ch = getopt(argc, argv,
+      ":EeC:U:BSHP:ab:c:d:f:l:m:n:s:t:u:v:p:w:k:")) != -1) {
 	switch(ch) {
 	case 'a':
 	    doall = 1;
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"