Fix long line and record proper commit message for r257427: Add the '-k' option for getopt() call and usage.

Submitted by:	Stefan Neudorf
PR:	bin/183494
MFC after:	1 week


git-svn-id: svn+ssh://svn.freebsd.org/base/head@257428 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f